GNOME Bugzilla – Bug 780108
dashdemux: invalid enum conversion in SIDX seek error handling
Last modified: 2017-03-16 10:42:37 UTC
This patch introduces some assignments of one enum type into a variable of a different enum type: > 141f3b2 dashdemux: If a SIDX seek failed although we're in the correct segment, disable the SIDX usage for this segment Which causes this compile failure due to warnings: ../subprojects/gst-plugins-bad/ext/dash/gstdashdemux.c:1350:42: error: implicit conversion from enumeration type 'GstIsoffParserResult' to different enumeration type 'GstSidxParserStatus' (aka 'enum _GstSidxParserStatus') [-Werror,-Wenum-conversion] dashstream->sidx_parser.status = GST_ISOFF_PARSER_UNEXPECTED; ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~ ../subprojects/gst-plugins-bad/ext/dash/gstdashdemux.c:2290:47: error: implicit conversion from enumeration type 'GstIsoffParserResult' to different enumeration type 'GstSidxParserStatus' (aka 'enum _GstSidxParserStatus') [-Werror,-Wenum-conversion] dash_stream->sidx_parser.status = GST_ISOFF_PARSER_UNEXPECTED; ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~ ../subprojects/gst-plugins-bad/ext/dash/gstdashdemux.c:2774:49: error: implicit conversion from enumeration type 'GstIsoffParserResult' to different enumeration type 'GstSidxParserStatus' (aka 'enum _GstSidxParserStatus') [-Werror,-Wenum-conversion] dash_stream->sidx_parser.status = GST_ISOFF_PARSER_UNEXPECTED; ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~ I'm not sure what the right value is instead of GST_ISOFF_PARSER_UNEXPECTED, maybe GST_ISOFF_SIDX_PARSER_FINISHED?
Thanks, will handle this tomorrow
commit 7e21168d4d27be5afe8431fc209255494594c639 Author: Sebastian Dröge <sebastian@centricular.com> Date: Thu Mar 16 12:35:40 2017 +0200 dashdemux: Just reset SIDX parser if the index is invalid for the current segment https://bugzilla.gnome.org/show_bug.cgi?id=780108