dashdemux: Just reset SIDX parser if the index is invalid for the current segment

https://bugzilla.gnome.org/show_bug.cgi?id=780108